# media

./: .gitignore  alex-c-line.config.js  manim.cfg  package.json  pnpm-lock.yaml  pyproject.toml
.github/: pull_request_template.md
.github/PULL_REQUEST_TEMPLATE/: breaking_change.md  bug_fix.md  documentation_change.md  internal_change.md  miscellaneous.md  new_feature.md  refactor.md  tooling_change.md
.github/workflows/: ci.yml  generate.yml  restrict-alex-up-bot-branches.yml  update-dependencies.yml  upload.yml
.husky/: pre-commit
src/: patch_it_up.py
src/commit_to_you/: artwork.py
src/patch_it_up/: artwork.py  chorus.py  intro-scream.py  intro_scream.py  verse_1.py
src/patch_it_up/chorus/: chorus_part_1.py  chorus_part_2.py
src/patch_it_up/chorus/helpers/: create_chorus.py
src/patch_it_up/end_screen/: end_screen.py  end_screen_image.py
src/patch_it_up/end_screen/helpers/: create_checks_passed_banner.py  text_group.py
src/patch_it_up/helpers/: create_code_window.py  create_text_with_background.py  pulse.py  pulse_title.py  shake_camera.py
src/patch_it_up/instrumental/: guitar_solo.py  interlude.py
src/patch_it_up/instrumental/helpers/: InstrumentalBreakScene.py
src/patch_it_up/post_chorus/: post_chorus.py
src/patch_it_up/post_chorus/helpers/constants/: CHANGE_THE_VERSION.py  FETCH_THE_DOCS.py  MERGE_THE_CHANGES.py  TESTING.py
src/patch_it_up/pre_chorus/: pre_chorus_1.py  pre_chorus_final.py  pre_chorus_main.py
src/patch_it_up/pre_chorus/helpers/: PreChorusBase.py
src/patch_it_up/verse/: verse_1.py  verse_2.py
src/patch_it_up/verse/helpers/: create_verse.py
src/scenes/alex_up_bot/: artwork.py
src/scenes/alex_up_bot/helpers/: mouth.py
src/scenes/patch_it_up/: artwork.py  chorus.py
src/scenes/patch_it_up/end_screen/: end_screen.py  end_screen_image.py
src/scenes/patch_it_up/end_screen/helpers/: tick.py
src/scenes/patch_it_up/helpers/: get_ranges.py  shake_camera.py
src/scenes/patch_it_up/helpers/constants/: PATCH_IT_UP_TITLE.py
src/scenes/patch_it_up/instrumental/: guitar_solo.py  interlude.py
src/scenes/patch_it_up/instrumental/helpers/: InstrumentalBreakScene.py
src/scenes/patch_it_up/post_chorus/: post_chorus.py
src/scenes/patch_it_up/post_chorus/helpers/constants/: BUILD.py  CHECKOUT_REPO.py  FORMATTING.py  LINTING.py  SETUP_PACKAGE.py  START_DEPLOYING.py
src/scenes/patch_it_up/pre_chorus/: pre_chorus_final.py  pre_chorus_main.py
src/scenes/patch_it_up/pre_chorus/helpers/: PreChorusBase.py
src/scenes/patch_it_up/verse/: verse_1.py  verse_2.py
src/scenes/patch_it_up/verse/helpers/: create_verse.py
src/scenes/stick_figure/: animation.py  image.py
src/utility/mobjects/: stick_figure.py  sunglasses.py
tests/: test_stick_figure.py
