[project]
name = "media"
version = "0.1.0"
description = "Default template for PDM package"
readme = "README.md"
license = { text = "MIT" }
requires-python = "==3.14.*"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.14",
]
dependencies = [ "manim>=0.19.2" ]
[[project.authors]]
name = "AlexMan123456"
email = "alex.man03888@gmail.com"

[dependency-groups]
dev = [
  "black>=26.1",
  "isort>=8.0.1",
  "pyproject-fmt>=2.16",
  "ruff>=0.15.1",
]

[tool.pdm]
distribution = false
[tool.pdm.scripts]
create-artwork = "manim -pql src/patch_it_up/artwork.py PatchItUp"
format-black = "black src"
lint-black = "black --check --diff src"
format-ruff = "ruff check src --fix"
lint-ruff = "ruff check src"
format-pyproject = { shell = "pyproject-fmt pyproject.toml || true" }
lint-pyproject = "pyproject-fmt --check pyproject.toml"
format-isort = "isort src"
lint-isort = "isort --check --diff src"
format-yml = "pnpm run format-yml"
lint-yml = "pnpm run lint-yml"
format = { composite = [
  "format-yml",
  "format-black",
  "format-ruff",
  "format-isort",
  "format-pyproject",
] }
lint = { composite = [ "lint-black", "lint-ruff", "lint-isort", "lint-pyproject", "lint-yml" ] }
generate = "pnpm run generate"

[tool.black]
target-version = [ "py314" ]

[tool.isort]
profile = "black"

[tool.pyproject-fmt]
generate_python_version_classifiers = false
table_format = "long"
