[project]
name = "media"
version = "0.1.0"
description = "Media used in my projects, often created with Manim."
readme = "README.md"
license = { text = "MIT" }
requires-python = "==3.14.*"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.14",
]
dependencies = [ "manim==0.20.1" ]
[[project.authors]]
name = "AlexMan123456"
email = "alex.man03888@gmail.com"

[dependency-groups]
dev = [
  "black==26.5.1",
  "isort==8.0.1",
  "mypy==2.1",
  "pyproject-fmt==2.23",
  "pytest==9.0.3",
  "ruff==0.15.16",
]

[tool.pdm]
distribution = false
[tool.pdm.scripts]
create-artwork = "manim -pql src/patch_it_up/artwork.py PatchItUp"
format = { composite = [
  "format-yml",
  "format-black",
  "format-ruff",
  "format-isort",
  "format-pyproject",
  "format-package-json"
] }
format-black = "black src"
format-isort = "isort src"
format-package-json = "pnpm run format-package-json"
format-pyproject = { shell = "pyproject-fmt pyproject.toml || true" }
format-ruff = "ruff check src --fix"
format-yml = "pnpm run format-yml"
generate = "pnpm run generate {args:src/scenes}"
lint = { composite = [
  "lint-black",
  "lint-ruff",
  "lint-isort",
  "lint-pyproject",
  "lint-exact-versions",
  "lint-package-json",
  "lint-yml",
  "lint-mypy"
] }
lint-black = "black --check --diff src"
lint-exact-versions = "pnpm run lint-exact-versions"
lint-isort = "isort --check --diff src"
lint-mypy = "mypy src"
lint-package-json = "pnpm run lint-package-json"
lint-pyproject = "pyproject-fmt --check pyproject.toml"
lint-ruff = "ruff check src"
lint-yml = "pnpm run lint-yml"
test = "pytest"

[tool.black]
target-version = [ "py314" ]

[tool.isort]
profile = "black"

[tool.pyproject-fmt]
generate_python_version_classifiers = false
table_format = "long"

[tool.mypy]
mypy_path = "src"
explicit_package_bases = true

[tool.pytest.ini_options]
pythonpath = [ "src" ]
